<resources>
    <string name="app_name" translatable="false">Just Another Minimal Launcher</string>
    <string name="settings_activity">Launcher Settings</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_notification_access">Notification Highlights</string>
    <string name="summary_wallpaper">Set wallpaper</string>
    <string name="summary_notification_access">Enable notification access</string>
    <string name="menu_about">About</string>
    <string name="about_neutral">View on Github</string>
    <string name="about_github_url" translatable="false">https://github.com/fvrodas/JAMLauncher</string>
    <string name="apps_sv_hint">What are you looking for?</string>
    <string name="service_name">Show notification highlights</string>
    <string name="summary_dynamic_colors">Enable Material Design 3 Dynamic Colors on Android 12 and above</string>
    <string name="menu_dynamic_colors">Dynamic Colors</string>
    <string name="summary_theme">Select your Color Scheme</string>
    <string name="menu_color_scheme">Color Scheme</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_appearance">Appearance</string>
    <string name="menu_other_settings">General</string>
    <string name="summary_default_launcher">Select this launcher as your default launcher</string>
    <string name="menu_default_launcher">Set as Default Launcher</string>
    <string name="colorscheme_default">Default</string>
    <string name="colorscheme_gruvbox">Gruvbox</string>
    <string name="colorscheme_nord">Nord</string>
    <string name="colorscheme_solarized">Solarized</string>
    <string name="colorscheme_tokyo_night">Tokyo Night</string>
    <string name="summary_hide_app_icons">Hide application icons for a more minimalist style</string>
    <string name="menu_hide_app_icons">Hide application icons</string>
    <string name="label_favorites">Favorites</string>
    <string name="shortcut_pin">Move to Home</string>
    <string name="shortcut_unpin">Move to Drawer</string>
    <string name="settings_button">Go to Launcher Settings</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Follow System</string>
    <string name="shortcut_app_info">App Info</string>
    <string name="notification_default_title">You have notifications</string>
    <string name="summary_themed_icons">Themed icons for your Homescreen</string>
    <string name="menu_themed_icons">Use themed icons</string>
    <string name="badge_experimental">Experimental </string>
    <string name="group_add_to_group">Add to group</string>
    <string name="group_move_to_group">Move to group</string>
    <string name="group_remove_from_group">Remove from group</string>
    <string name="group_create_new">New group</string>
    <string name="group_rename">Rename</string>
    <string name="group_delete">Delete group</string>
    <string name="group_name_hint">Group name</string>
    <string name="group_create_title">Create Group</string>
    <string name="group_rename_title">Rename Group</string>
    <string name="group_confirm">Confirm</string>
    <string name="group_cancel">Cancel</string>
    <string name="group_select_title">Add to group</string>
    <string name="group_label_desktop">Home</string>
    <string name="group_all_apps">All</string>
    <string name="alignment_left">Left</string>
    <string name="alignment_center">Center</string>
    <string name="alignment_right">Right</string>
    <string name="menu_pinned_alignment">Home Panel Alignment</string>
    <string name="summary_pinned_alignment">Horizontal alignment of the home panel</string>
    <string name="menu_pinned_order">Home Panel App Order</string>
    <string name="summary_pinned_order">Customize the order of apps on the home panel</string>
    <string name="pinned_order_title">Home Panel App Order</string>
    <string name="pinned_order_empty">No apps moved to Home. Move apps to Home from the app drawer first</string>
</resources>