<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/menu_appearance">
        <PreferenceScreen
            android:summary="@string/summary_wallpaper"
            android:title="@string/menu_wallpaper">
            <intent android:action="android.intent.action.SET_WALLPAPER" />
        </PreferenceScreen>
        <DropDownPreference
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_names"
            android:key="launcher_theme"
            android:summary="@string/summary_theme"
            android:title="@string/menu_theme" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="dynamic_color_enabled"
            android:summary="@string/summary_dynamic_colors"
            android:title="@string/menu_dynamic_colors" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/menu_other_settings">
        <PreferenceScreen
            android:summary="@string/summary_notification_access"
            android:title="@string/menu_notification_access">
            <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/menu_about">
        <PreferenceScreen
            android:divider="@android:drawable/divider_horizontal_dark"
            android:summary="@string/about_github_url"
            android:title="@string/about_neutral">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_github_url" />
        </PreferenceScreen>

        <PreferenceScreen
            android:selectable="false"
            android:summary="@string/app_version_name"
            android:title="@string/app_name" />
    </PreferenceCategory>


</PreferenceScreen>
